Add nav bar elements

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-//portfolio1
+<!DOCTYPE html>
+<HTML>
+    <head>
+        <title>Isaac J Kim</title> 
+        <
+    </head>
+
+    <!--Navigation Bar-->
+    <nav>
+        <div id="Name">Isaac </div>
+        <ul >
+            <li >about</li>
+            <li>projects</li>
+            <li>contact</li>
+        </ul>
+    </nav>
+</HTML>
