Add content and styel to nav

--- a/index.html
+++ b/index.html
@@ -2,16 +2,19 @@
 <HTML>
     <head>
         <title>Isaac J Kim</title> 
-        <
+        <link href="/portfolio1/styles.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Press+Start+2P&family=Silkscreen&display=swap" rel="stylesheet">
     </head>
 
-    <!--Navigation Bar-->
+<!--Navigation Bar-->
     <nav>
-        <div id="Name">Isaac </div>
-        <ul >
-            <li >about</li>
-            <li>projects</li>
-            <li>contact</li>
+        <div id="name">jeongho kim</div>
+        <div id="menu">
+            <div id="about" ><a>about</a></about></div>
+            <div id="projects"><a>projects</a></div>
+            <div id="contact"><a>contact</a></div>
         </ul>
     </nav>
 </HTML>
