--- a/index.html
+++ b/index.html
@@ -17,4 +17,28 @@
             <div id="contact"><a>contact</a></div>
         </ul>
     </nav>
+
+
+<!--About Me-->
+    <main>
+        <div id="about-me-container">
+            <img src='./media/isaac.jpg' alt="picture of isaac">
+            <div id="about-me-text">Jeongho Kim is a Korean-American web developer with a focus on HTML, CSS, and Javascript. 
+                Currently working on expanding his knowledge of programming and looking into which stacks he should be focusing on next.
+                This is some more text to fill up this area so that it is more aesthetically pleasing. Simplicity and efficiency are his 
+                main driving design principles.
+            </div>
+        </div>
+
+    </main>
+
+
+
+
+
+
+
+
+
+
 </HTML>
