Add projects sections

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <nav>
         <div id="name">jeongho kim</div>
         <div id="menu">
-            <div id="about" ><a>about</a></about></div>
-            <div id="projects"><a>projects</a></div>
+            <div id="about" ><a href="#about-me-container">about</a></about></div>
+            <div id="projects"><a href="#projects-container">projects</a></div>
             <div id="contact"><a>contact</a></div>
         </ul>
     </nav>
@@ -29,7 +29,19 @@
                 main driving design principles.
             </div>
         </div>
+ 
+<!--Projects Section--> 
+        <div id="projects-container">
+            <div id="project-1"></div>
+            <div id="project-1-label">Project 1</div>
 
+            <div id="project-2"></div>
+            <div id="project-2-label">Project 2</div>
+
+            <div id="project-3"></div>
+            <div id="project-3-label">Project 3</div>
+            
+        </div>
     </main>
 
 
