add contact sections

--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Press+Start+2P&family=Silkscreen&display=swap" rel="stylesheet">
+        <script src="./main.js" defer></script>
     </head>
 
 <!--Navigation Bar-->
     <nav>
         <div id="name">jeongho kim</div>
         <div id="menu">
-            <div id="about" ><a href="#about-me-container">about</a></about></div>
+            <div id="about" ><a href="#about-me-container">about</a></div>
             <div id="projects"><a href="#projects-container">projects</a></div>
-            <div id="contact"><a>contact</a></div>
+            <div id="contact"><a href="#Contact-container">contact</a></div>
         </ul>
     </nav>
 
@@ -42,8 +43,19 @@
             <div id="project-3-label">Project 3</div>
             
         </div>
-    </main>
 
+<!--Contact Section-->
+        <div id='Contact-container'>
+            <div id="email"><a>Email</a></div>
+            <div id="linkedin"><a>LinkedIn</a></div>
+            <div id="github"><a>gitHub</a></div>
+            <div id="instagram"><a>Instagram</a></div>
+        </div> 
+    </main>
+<!--footer-->
+    <footer>
+        designed by jeongho kim - 2022
+    </footer>
 
 
 
