add contact button script

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Press+Start+2P&family=Silkscreen&display=swap" rel="stylesheet">
-        <script src="./main.js" defer></script>
+        <script type="text/javascript" src="./main.js" defer></script>
     </head>
 
 <!--Navigation Bar-->
