add script to name

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <div id="about-me-container">
             <img src='./media/isaac.jpg' alt="picture of isaac">
-            <div id="about-me-text">Jeongho Kim is a Korean-American web developer with a focus on HTML, CSS, and Javascript. 
+            <div id="about-me-text">Isaac Jeongho Kim is a Korean-American web developer with a focus on HTML, CSS, and Javascript. 
                 Currently working on expanding his knowledge of programming and looking into which stacks he should be focusing on next.
                 This is some more text to fill up this area so that it is more aesthetically pleasing. Simplicity and efficiency are his 
                 main driving design principles.
