--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
             <img src='./media/isaac.jpg' alt="picture of isaac">
             <div id="about-me-text">Isaac Jeongho Kim is a Korean-American web developer with a focus on HTML, CSS, and Javascript. 
                 Currently working on expanding his knowledge of programming and looking into which stacks he should be focusing on next.
-                This is some more text to fill up this area so that it is more aesthetically pleasing. Simplicity and efficiency are his 
-                main driving design principles.
+                This is some more text to fill up this area so that it is more aesthetically pleasing. Now I will write something that one might
+                expect a web developer to say. Simplicity and efficiency are his 
+                main driving design principles. This is a good length.
             </div>
         </div>
  
@@ -51,7 +52,13 @@
             
         </div>
 
-
+<!--Comment form-->
+        <div id="comment-container">
+            <form id="comment-box">
+                <textarea id="comments" name="comments" rows="4" cols="70">Leave a direct message</textarea>
+                <br><input type="submit" id="comments" name="comments">
+            </form>
+        </div>
     </main>
 <!--footer-->
     <footer>
